--- a/ui.apps/src/main/content/jcr_root/apps/anf-code-challenge/components/newsfeed/newsfeed.html
+++ b/ui.apps/src/main/content/jcr_root/apps/anf-code-challenge/components/newsfeed/newsfeed.html
@@ -2,29 +2,27 @@
 <sly data-sly-use.clientlib="/libs/granite/sightly/templates/clientlib.html"
      data-sly-call="${clientlib.css @ categories=['anf.newsfeed']}"/>
 
-<div data-sly-use.myObject="com.anf.core.models.NewsFeedModel">
+<div data-sly-use.model="com.anf.core.models.NewsFeedModel">
 
     <section class="recentNews">
         <div class="container">
             <h2 class="news-title">Recent News</h2>
-            <div data-sly-list.newsList="${myObject.newsFeed}">
-
+            <div data-sly-list.newsFeed="${model.newsFeedList}">
                 <div class="row">
-
                     <div class="ct-blog col-sm-6 col-md-4">
                         <div class="inner">
                             <div class="fauxcrop">
-                                <a href="#"><img alt="News Entry" src="${newsList.urlImage}"></a>
+                                <a href="#"><img alt="News Entry" src="${newsFeed.urlImage}"></a>
                             </div>
                             <div class="ct-blog-content">
                                 <div class="ct-blog-date">
-                                    <span> ${newsList.currentdate} || ${newsList.author} </span><strong>1</strong>
+                                    <span> ${newsFeed.currentDate} || ${newsFeed.author} </span><strong>1</strong>
                                 </div>
                                 <h3 class="ct-blog-header">
-                                    ${newsList.title}<br>
+                                    ${newsFeed.title}<br>
                                 </h3>
                                 <div class="ct-blog-dec">
-                                    <span>  ${newsList.Description}</span><strong>1</strong>
+                                    <span>  ${newsFeed.description}</span><strong>1</strong>
                                 </div>
                             </div>
                         </div>
